Fix blog post teaser text wrong color on 6th entry

--- a/www/wp-content/themes/Zephyr-hodes-ST/css/style.less
+++ b/www/wp-content/themes/Zephyr-hodes-ST/css/style.less
@@ -275,11 +275,13 @@ ul li { margin: 0 0 0.2rem; }
 			.fdm-post-teaser-inner {
 				background-color: @blue;
 			}
+			color: black;
 		}
 		.teasergrey {
 			.fdm-post-teaser-inner {
 				background-color: #e4e4e4;
 			}
+			color: black;
 		}
 		.teaserblack {
 			.fdm-post-teaser-inner {
